# OpenGLTemplate

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
